examples/pass/mainDoble.c
int main(){
    print("Hay dos main, este es el PRIMERO: mainDoble");
    return 0;
}

int main(){
    print("Hay dos main, este es el SEGUNDO: mainDoble");
    return 0;
}