examples/error/mainDoble.c
int main(){
    printf("Hay dos main, este es el PRIMERO: mainDoble");
    return 0;
}

int main(){
    printf("Hay dos main, este es el SEGUNDO: mainDoble");
    return 0;
}
